# pezin

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: advanced-patterns.md  cli-usage.md  configuration.md  conventional-commits.md  installation.md  multi-language-support.md  python-api.md  quick-start.md  troubleshooting.md
examples/: multi-language-setup.md
scripts/: setup-hooks.sh
src/pezin/: __init__.py  logging.py
src/pezin/cli/: __init__.py  commands.py  hooks.py  main.py
src/pezin/core/: __init__.py  commit.py  handlers.py  version.py
src/pezin/hooks/: post_commit.py  pre_commit.py  prepare_commit_msg.py
src/pumper/: __init__.py  logging.py
src/pumper/cli/: __init__.py  commands.py  hooks.py  main.py  utils.py
src/pumper/core/: __init__.py  changelog.py  commit.py  handlers.py  version.py
src/pumper/hooks/: __init__.py  post_commit.py  pre_commit.py  prepare_commit_msg.py
tests/: __init__.py  conftest.py
tests/cli/: test_cli.py
tests/core/: test_changelog.py  test_commit.py  test_handlers.py  test_version.py
tests/hooks/: test_pre_commit.py
